--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,45 @@
 asn1crypto==0.24.0
-certifi==2019.3.9
-cffi==1.12.3
+atomicwrites==1.3.0
+attrs==19.1.0
+bcrypt==3.1.6
+blinker==1.4
+certifi==2018.11.29
+cffi==1.12.2
 chardet==3.0.4
-cliapp==1.20170827
 Click==7.0
-cmdtest==0.32
 cryptography==2.6.1
-enum34==1.1.6
+docker==3.7.0
+docker-pycreds==0.4.0
 Flask==1.0.2
+Flask-Bcrypt==0.7.1
+Flask-Login==0.4.1
+Flask-Mail==0.9.1
+flask-marshmallow==0.9.0
 Flask-SQLAlchemy==2.3.2
+Flask-Testing==0.7.1
 Flask-WTF==0.14.2
-gunicorn==19.9.0
-gyp==0.1
 idna==2.8
-ipaddress==1.0.22
 itsdangerous==1.1.0
-Jinja2==2.10.1
-keyring==10.6.0
-keyrings.alt==3.0
-Markdown==2.6.9
+Jinja2==2.10
 MarkupSafe==1.1.1
+marshmallow==2.18.1
+marshmallow-sqlalchemy==0.16.0
+more-itertools==6.0.0
 ndg-httpsclient==0.5.1
+nltk==3.4.1
+pluggy==0.9.0
 pusher==2.1.3
+py==1.8.0
 pyasn1==0.4.5
 pycparser==2.19
-pycrypto==2.6.1
-Pygments==2.2.0
-pygobject==3.26.1
 PyNaCl==1.3.0
 pyOpenSSL==19.0.0
-pyxdg==0.25
-PyYAML==3.12
+pytest==4.3.0
 requests==2.21.0
-SecretStorage==2.3.1
 six==1.12.0
-SQLAlchemy==1.3.3
-ttystatus==0.38
-urllib3==1.25
-Werkzeug==0.15.2
+SQLAlchemy==1.2.18
+textblob==0.15.3
+urllib3==1.24.1
+websocket-client==0.55.0
+Werkzeug==0.14.1
 WTForms==2.2.1
