--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ flask-marshmallow==0.9.0
 Flask-SQLAlchemy==2.3.2
 Flask-Testing==0.7.1
 Flask-WTF==0.14.2
+gunicorn==19.0.0
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10
